--- a/style.css
+++ b/style.css
@@ -1,53 +1,61 @@
-@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: "Spartan", sans-serif;
+  font-family: sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
+body{
+  height: 100%;
+}
+//headers
+.menu-btn{
+  color: #424144;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
 }
 
-/* Global Styles */
-
-h1 {
-  font-size: 50px;
-  line-height: 64px;
-  color: #222;
+.navbar{
+  padding: 20px 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  z-index: 999;
+  background-color: #f3f4f6;
+  box-shadow: 0 0 14px rgba(0,0,0,0.3);
+  
 }
 
-h2 {
-  font-size: 46px;
-  line-height: 54px;
-  color: #222;
+.navbar .logo h1{
+  color: #424144;
+  border-bottom: 4px solid fd6561;
+  
 }
 
-h4 {
+.navbar .menu li{
+  list-style: none;
+  display: inline-block;
+}
+
+.navbar .menu li a{
+  display: block;
+  margin-left: 20px;
+  color: #424144;
+  border-bottom: 4px solid transparent;
+  text-decoration: none;
   font-size: 20px;
-  color: #222;
+  font-weight: bold;
 }
 
-h6 {
-  font-weight: 700;
-  font-size: 12px;
+.navbar .menu li .active {
+  border-bottom: 4px solid #f63e4e;
 }
 
-p {
-  font-size: 16px;
-  color: #465b52;
-  margin: 15px 0 20px 0;
+.navbar .menu li a i{
+  color: #f63e4e;
 }
 
-.section-p1 {
-  padding: 40px 80px;
-}
-
-.section-m1 {
-  margin: 40px 0;
-}
-
-body {
-  width: 100%;
+.navbar .menu li a:hover {
+  border-bottom: 4px solid #f63e4e;
 }
