--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 }
 
 .content{
-  background-image: url(shopping.jpg);
+  background-image: url(shopping.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 0 5px;
