--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 }
 
 .content{
-  background-image: url(shopping.jpeg);
+  background-image: url(https://github.com/jenormus/jenormus.github.io/blob/main/shopping.jpeg?raw=true);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 0 5px;
