--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
   background-repeat: no-repeat;
   padding: 0 5px;
   display: flex;
-  flux-direction: column;
+  flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   color: #424144;
