--- a/style.css
+++ b/style.css
@@ -75,9 +75,11 @@ body{
 }
 .content h1{
   font-size: 40px;
+  justify-content: center;
 }
 
 .content p{
+  justify-content: center;
   font-size: 20px;
   margin-top: 20px;
 }
