--- a/style.css
+++ b/style.css
@@ -67,18 +67,19 @@ body{
   padding: 0 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
   color: #424144;
   height: 100vh;
   
 }
 .content h1{
+  padding: 0 5px;
   font-size: 40px;
   justify-content: center;
 }
 
 .content p{
+  padding: 0 5px;
   justify-content: center;
   font-size: 20px;
   margin-top: 20px;
