--- a/style.css
+++ b/style.css
@@ -73,13 +73,13 @@ body{
   
 }
 .content h1{
-  padding: 0 5px;
   font-size: 40px;
   justify-content: center;
+  margin: 10px;
 }
 
 .content p{
-  padding: 0 5px;
+  margin: 10px;
   justify-content: center;
   font-size: 20px;
   margin-top: 20px;
