--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
 }
 
 .content{
-  background-image: url(https://us.123rf.com/450wm/marushy/marushy1806/marushy180600598/103680680-jeune-belle-fille-shopping-posant-avec-des-sacs-cadeaux-sur-fond-blanc.jpg?ver=6)
+  background-image: url(shopping.jpeg)
   background-size: cover;
   background-repeat: no-repeat;
   padding: 0 5px;
