--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   justify-content: space-between;
   align-items: center;
   position: sticky;
+  top: 0%;
   z-index: 999;
   background-color: #f3f4f6;
   box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
@@ -91,5 +92,9 @@ body {
   cursor: pointer;
 }
 
-
+.pheading{
+  text-align: center;
+  margin: 50px 0;
+  color: #424144;
+}
 
