--- a/style.css
+++ b/style.css
@@ -98,3 +98,79 @@ body {
   color: #424144;
 }
 
+.sec{
+  padding: 10px 5px
+}
+
+.product .card{
+  width: 310px;
+  background: #f5f5f5;
+  box-shadow : 0 10px 20px rgba(0,0,0,0.3)
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 20px;
+}
+
+.product .card img{
+  height: 250px;
+  width: 100%;
+}
+
+.product .card .desc{
+  padding: 5px 20px;
+  opacity: 0,8;
+}
+
+.product .card .title{
+  font-weight: 900;
+  font-size: 20px;
+  color: #424144;
+  padding: 0 20px;
+
+}
+
+.product .card .box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.product .card .box .price{
+  color: #f63e4e;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.product .card .box .btn{
+  font-size: 13px;
+  color: #f63e4e;
+  padding: 10px 18px;
+  font-weight: 900;
+  border: 1px solid #f63e4e;
+  border-radius: 20px;
+}
+
+.product .card .box .btn:hover{
+  cursor: pointer;
+  background-color: #f63e4e;
+  color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
