--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ body {
   padding: 10px 5px
 }
 
+.products{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(320px,1fr))
+}
 .product .card{
   width: 310px;
   background: #f5f5f5;
