--- a/style.css
+++ b/style.css
@@ -161,11 +161,21 @@ body {
   color: white;
 }
 
+footer{
+  background-color: #f3f4f6;
+  height: 10vh;
+}
 
+footer p{
+  text-align: center;
+  line-height: 10vh;
+}
 
-
-
-
+footer p a{
+  text-decoration: none;
+  color: #f63e4e;
+  font-weight: bold;
+}
 
 
 
