--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   padding: 10px 5px;
 }
 
-.products{
+.product{
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
 }
