--- a/style.css
+++ b/style.css
@@ -75,11 +75,13 @@ body {
 
 .content h1 {
   font-size: 40px;
+  text-align: center;
 }
 
 .content p {
   font-size: 20px;
   margin-top: 20px;
+  text-align: center;
 }
 
 .content button {
@@ -91,6 +93,7 @@ body {
   font-size: 20px;
   border-radius: 5px;
   cursor: pointer;
+  text-align: center;
 }
 
 .pheading {
