--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 }
 
 .content {
-  background-image: url(https://thumbs.dreamstime.com/b/femme-d-achats-12360755.jpg);
+  background-image: url(https://previews.123rf.com/images/rattikankeawpun/rattikankeawpun1410/rattikankeawpun141000005/32456828-feux-d-artifice-cadre-color%C3%A9-sur-fond-blanc.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 0 5px;
