--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   color: #424144;
-  height: 70vh;
+  height: 100%;
   align-items: center;
   text-align: center;
 }
