--- a/style.css
+++ b/style.css
@@ -70,23 +70,29 @@ body {
   justify-content: center;
   align-items: flex-start;
   color: #424144;
-  height: 100%;
+  height: 100vh;
   align-items: center;
   text-align: center;
 }
 
 .content h1 {
   font-size: 40px;
+  align-items: center;
+  text-align: center;
 }
 
 .content p {
   font-size: 20px;
   margin-top: 20px;
+  align-items: center;
+  text-align: center;
 }
 
 .content button {
   margin-top: 30px;
   padding: 15px 30px;
+  align-items: center;
+  text-align: center;
   border: none;
   background: #f63e4e;
   color: #fff;
