--- a/style.css
+++ b/style.css
@@ -180,3 +180,48 @@ footer p a {
   color: #f63e4e;
   font-weight: bold;
 }
+
+@media (max-width: 820px){
+  .menu-btn{
+    display: block;
+    z-index: 999;
+  }
+
+  .menu-btn i.active::before{
+    content: "\f00d";
+  }
+
+  .navbar .menu{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background-color: #f3f4f6;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+  }
+  .navbar .menu.active{
+    left: 0%;
+  }
+  .navbar .menu li{
+    display: flex;
+    justify-content: center;
+  }
+  .navbar .menu li a{
+    margin: 10px 0;
+    font-size: 25px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
